kubernetes/printer/go2rtc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &appName go2rtc
  namespace: printer
spec:
  selector:
    app: *appName
  ports:
    - port: 1984
      targetPort: http
      protocol: TCP
      name: http
